--- a/.github/workflows/receive-pull-request.yml
+++ b/.github/workflows/receive-pull-request.yml
@@ -3,26 +3,6 @@ name: Receive pull request
 on:
   pull_request:
 
-# TODO: Update pull request, e.g.,
-# - name: Update Pull Request
-#   uses: actions/github-script@v6
-#   if: github.event_name == 'pull_request'
-#   with:
-#     script: |
-#       const output = `
-#       #### Hadolint: \`${{ steps.hadolint.outcome }}\`
-#       \`\`\`
-#       ${process.env.HADOLINT_RESULTS}
-#       \`\`\`
-#       `;
-
-#       github.rest.issues.createComment({
-#         issue_number: context.issue.number,
-#         owner: context.repo.owner,
-#         repo: context.repo.repo,
-#         body: output
-#       })
-
 jobs:
   security-scan-code:
     runs-on: ubuntu-20.04
@@ -50,15 +30,6 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
-      # - name: Lint
-      #   uses: golangci/golangci-lint-action@v3
-      # - name: Vet
-      #   run: go vet
-      # - name: Checking Dockerfile
-      #   uses: hadolint/hadolint-action@v3.1.0
-      #   with:
-      #     verbose: true
-
   test:
     runs-on: ubuntu-20.04
     steps:
@@ -66,18 +37,6 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
-      # - name: Test
-      #   run: go test ./...
+      - name: Unit test
+        run: ./gradlew --warning-mode all cleanTest test
 
-  build:
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-
-      # - name: Install dependencies
-      #   run: go mod download
-      # - name: Building
-      #   run: go build -o bodleian-service
