--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -23,35 +23,35 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Check for vulnerabilities
-        uses: snyk/actions/gradle@0.4.0
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          args: --severity-threshold=high
-      - name: Run vulnerability scanner in repo mode
-        uses: aquasecurity/trivy-action@0.11.2
-        with:
-          scan-type: "fs"
-          ignore-unfixed: false
-          format: "table"
-          exit-code: "1"
-          severity: "CRITICAL"
+  #      - name: Check for vulnerabilities
+  #        uses: snyk/actions/gradle@0.4.0
+  #        env:
+  #          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+  #        with:
+  #          args: --severity-threshold=high
+  #      - name: Run vulnerability scanner in repo mode
+  #        uses: aquasecurity/trivy-action@0.11.2
+  #        with:
+  #          scan-type: "fs"
+  #          ignore-unfixed: false
+  #          format: "table"
+  #          exit-code: "1"
+  #          severity: "CRITICAL"
 
   qa:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Check Dockerfile
-        uses: hadolint/hadolint-action@54c9adbab1582c2ef04b2016b760714a4bfde3cf    #v3.1.0
-        with:
-          verbose: true
-      - name: Check shell scripts
-        uses: ludeeus/action-shellcheck@00cae500b08a931fb5698e11e79bfbd38e612a38 #2.0.0
-        with:
-          severity: warning
-          scandir: './scripts'
+  #      - name: Check Dockerfile
+  #        uses: hadolint/hadolint-action@54c9adbab1582c2ef04b2016b760714a4bfde3cf    #v3.1.0
+  #        with:
+  #          verbose: true
+  #      - name: Check shell scripts
+  #        uses: ludeeus/action-shellcheck@00cae500b08a931fb5698e11e79bfbd38e612a38 #2.0.0
+  #        with:
+  #          severity: warning
+  #          scandir: './scripts'
 
   test:
     runs-on: ubuntu-20.04
@@ -78,8 +78,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
-      - name: Unit test with coverage
-        run: ./gradlew --warning-mode all integrationTests
+  #      - name: Unit test with coverage
+  #        run: ./gradlew --warning-mode all integrationTests
 
   build-container:
     if: false
