--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -23,20 +23,20 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-  #      - name: Check for vulnerabilities
-  #        uses: snyk/actions/gradle@0.4.0
-  #        env:
-  #          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-  #        with:
-  #          args: --severity-threshold=high
-  #      - name: Run vulnerability scanner in repo mode
-  #        uses: aquasecurity/trivy-action@0.11.2
-  #        with:
-  #          scan-type: "fs"
-  #          ignore-unfixed: false
-  #          format: "table"
-  #          exit-code: "1"
-  #          severity: "CRITICAL"
+      - name: Check for vulnerabilities
+        uses: snyk/actions/gradle@0.4.0
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --severity-threshold=high
+      - name: Run vulnerability scanner in repo mode
+        uses: aquasecurity/trivy-action@0.11.2
+        with:
+          scan-type: "fs"
+          ignore-unfixed: false
+          format: "table"
+          exit-code: "1"
+          severity: "CRITICAL"
 
   qa:
     runs-on: ubuntu-20.04
