--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -43,15 +43,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-  #      - name: Check Dockerfile
-  #        uses: hadolint/hadolint-action@54c9adbab1582c2ef04b2016b760714a4bfde3cf    #v3.1.0
-  #        with:
-  #          verbose: true
-  #      - name: Check shell scripts
-  #        uses: ludeeus/action-shellcheck@00cae500b08a931fb5698e11e79bfbd38e612a38 #2.0.0
-  #        with:
-  #          severity: warning
-  #          scandir: './scripts'
+      - name: Check Dockerfile
+        uses: hadolint/hadolint-action@54c9adbab1582c2ef04b2016b760714a4bfde3cf    #v3.1.0
+        with:
+          verbose: true
+      - name: Check shell scripts
+        uses: ludeeus/action-shellcheck@00cae500b08a931fb5698e11e79bfbd38e612a38 #2.0.0
+        with:
+          severity: warning
+          scandir: './scripts'
 
   test:
     runs-on: ubuntu-20.04
@@ -78,10 +78,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-  #      - name: Unit test with coverage
-  #        run: ./gradlew --warning-mode all integrationTests
+      - uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 17
+      - name: Unit test with coverage
+        run: ./gradlew --warning-mode all integrationTests
 
   build-container:
     if: false
