--- a/.github/workflows/receive-pull-request.yml
+++ b/.github/workflows/receive-pull-request.yml
@@ -27,15 +27,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
+      - uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 17
 
   test:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-      - name: Unit test
+      - uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 17
+      - name: Unit test with coverage
         run: ./gradlew --warning-mode all cleanTest test
