--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -63,15 +63,15 @@ jobs:
           distribution: temurin
           java-version: 17
       - name: Unit test with coverage
-        run: ./gradlew --warning-mode all cleanTest test
-      # - name: Upload coverage
-      #   run: |
-      #     bash <(curl -Ls https://coverage.codacy.com/get.sh) report --force-coverage-parser go -r coverage.out
-      #   env:
-      #     CODACY_PROJECT_NAME: bodleian-service
-      #     CODACY_ORGANIZATION_PROVIDER: gh
-      #     CODACY_USERNAME: ${{ github.repository_owner }}
-      #     CODACY_API_TOKEN: ${{ secrets.CODACY_API_TOKEN }}
+        run: ./gradlew --warning-mode all cleanTest test jacocoTestReport
+      - name: Upload coverage
+        run: |
+          bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r build/reports/jacoco/test/jacocoTestReport.xml
+        env:
+          CODACY_PROJECT_NAME: bodleian-service
+          CODACY_ORGANIZATION_PROVIDER: gh
+          CODACY_USERNAME: ${{ github.repository_owner }}
+          CODACY_API_TOKEN: ${{ secrets.CODACY_API_TOKEN }}
 
   integration-test:
     runs-on: ubuntu-20.04
@@ -82,7 +82,7 @@ jobs:
         with:
           distribution: temurin
           java-version: 17
-      - name: Unit test with coverage
+      - name: Integration test
         run: ./gradlew --warning-mode all integrationTests
 
   build-container:
