--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -112,6 +112,10 @@ jobs:
           id_token_include_email: true
       - name: Set up GCP environment
         uses: google-github-actions/setup-gcloud@v1
+      - uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 17
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Build image
