--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -120,15 +120,15 @@ jobs:
         uses: docker/setup-buildx-action@v3
       - name: Build image
         run: ./scripts/containerize.sh
-#      - name: Run vulnerability scanner
-#        uses: aquasecurity/trivy-action@0.12.0
-#        with:
-#          image-ref: ${{ env.image-name }}
-#          format: "table"
-#          exit-code: "1"
-#          ignore-unfixed: true
-#          vuln-type: "os,library"
-#          severity: "CRITICAL,HIGH"
+      - name: Run vulnerability scanner
+        uses: aquasecurity/trivy-action@0.12.0
+        with:
+          image-ref: ${{ env.image-name }}
+          format: "table"
+          exit-code: "1"
+          ignore-unfixed: true
+          vuln-type: "os,library"
+          severity: "CRITICAL,HIGH"
 #      - name: Push image
 #        run: ./scripts/containerize.sh
 #        env:
