--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -3,4 +3,6 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: create
-      generate_statistics: true
+    properties:
+      hibernate:
+        generate_statistics: true
