--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,14 @@
 spring:
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     open-in-view: false
-    generate-ddl: true
+    generate-ddl: false
+
+
+Foo: "bar"
+
+bodleian:
+  externalServices:
+    openLibrary:
+      apiBaseUrl: "foo"
