Add wiremock for openlibrary

--- a/src/test/resources/application-integration-test.yml
+++ b/src/test/resources/application-integration-test.yml
@@ -7,3 +7,8 @@ spring:
     properties:
       hibernate:
         generate_statistics: true
+
+bodleian:
+  externalServices:
+    openLibrary:
+      apiBaseUrl: http://localhost:8081
